--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ant-design/react-native": "5.0.4",
+    "@react-native-camera-roll/camera-roll": "5.3.1",
+    "@react-native-community/segmented-control": "2.2.2",
+    "@react-native-community/slider": "4.4.2",
+    "@react-native-picker/picker": "2.4.9",
+    "@react-navigation/native": "6.1.6",
+    "@react-navigation/native-stack": "6.9.12",
+    "@reduxjs/toolkit": "1.9.3",
+    "lodash": "4.17.21",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "react-native-gesture-handler": "2.9.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "3.20.0",
+    "react-redux": "8.0.5",
+    "redux": "4.2.1",
+    "redux-thunk": "2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
